# anki-flashcard-maker

./: .gitignore  Dockerfile  README.md  env_template.txt  input.txt  main.py  nixpacks.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  start.sh
src/: __init__.py  anki_exporter.py  downloadAudio.js  download_audio.py  input.txt  lineProcessing.js  line_processing.py  main.js  main.py  openai_api.py  output.txt  reverso.js  test.txt
utils/: __init__.py  utils.py
web/: package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
